# ritec

./: .gitignore  Cargo.toml  ERRORS.md  LICENSE  README.md  out.c  test.ri  test.rit
crates/ritec-arena/: Cargo.toml
crates/ritec-arena/src/: lib.rs
crates/ritec-ast/: Cargo.toml
crates/ritec-ast/src/: contract.rs  expr.rs  generic.rs  item.rs  lib.rs  module.rs  parser.rs  path.rs  pattern.rs  type.rs
crates/ritec-build/: Cargo.toml
crates/ritec-build/src/: lib.rs
crates/ritec-codegen-c/: Cargo.toml
crates/ritec-codegen-c/src/: lib.rs
crates/ritec-diagnostic/: Cargo.toml
crates/ritec-diagnostic/src/: diagnostic.rs  lib.rs  span.rs
crates/ritec-hir/: Cargo.toml
crates/ritec-hir/src/: adt.rs  body.rs  contract.rs  expr.rs  generic.rs  implement.rs  known.rs  lib.rs  module.rs  partial.rs  project.rs  projected.rs  solve.rs  trait.rs  ty.rs  type.rs  types.rs  unify.rs  unit.rs  unknown.rs
crates/ritec-lower/: Cargo.toml
crates/ritec-lower/src/: body.rs  lib.rs  lower.rs  populate.rs  type.rs
crates/ritec-mir/: Cargo.toml
crates/ritec-mir/src/: block.rs  body.rs  const.rs  lib.rs  operand.rs  place.rs  statement.rs  terminator.rs  type.rs  unit.rs  value.rs
crates/ritec-parse/: Cargo.toml
crates/ritec-parse/src/: error.rs  lib.rs  stream.rs  token.rs  tokenize.rs
crates/ritec-solve/: Cargo.toml
crates/ritec-solve-repl/: Cargo.toml
crates/ritec-solve-repl/src/: main.rs  repl.rs
crates/ritec-solve/src/: generic.rs  lib.rs  partial.rs  project.rs  solver.rs  trait.rs  unknown.rs  variable.rs  where.rs  world.rs
crates/ritec-source/: Cargo.toml
crates/ritec-source/src/: source.rs
crates/ritec-span/: Cargo.toml
crates/ritec-span/src/: span.rs
crates/ritec-type/: Cargo.toml
crates/ritec-type-repl/: Cargo.toml
crates/ritec-type-repl/src/: lib.rs  repl.rs  variable.rs
crates/ritec-type/src/: error.rs  forall.rs  implement.rs  known.rs  lib.rs  partial.rs  project.rs  projected.rs  solver.rs  trait.rs  unify.rs  unknown.rs  variable.rs  where.rs  world.rs
docs/: MIR.md  MODULE.md  SOLVER.md
example/module_test/: main.ri  mul.ri
example/module_test/ext/: div.ri  mod.ri
example/module_test/ops/: add.ri  mod.ri  sub.ri
ritec/: ansi.ri  ast.ri  attribute.ri  diagnostic.ri  format.ri  hir.ri  lower.ri  number.ri  parse.ri  ritec.ri  span.ri
ritec/diagnostic/: report.ri
ritec/hir/: solve.ri  ty.ri
ritec/lower/: expr.ri
ritec/parse/: expr.ri  item.ri  lexer.ri  pat.ri  token.ri  ty.ri
src/: ast.rs  build.rs  decorator.rs  hir.rs  infer.rs  interner.rs  interpret.rs  lex.rs  lower.rs  main.rs  mir.rs  number.rs  parse.rs  rir.rs  span.rs  specialize.rs  token.rs
src/interpret/: builtins.rs  interpret.rs  value.rs
std/: array.ri  debug.ri  dict.ri  fs.ri  io.ri  list.ri  math.ri  order.ri  path.ri  result.ri  std.ri  string.ri  vec.ri
test/: test.ri
