[package]
name = "ritec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rite contributors"]
license = "MIT"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
ritec-arena         = { path = "crates/ritec-arena",        version = "0.1.0" }
ritec-ast           = { path = "crates/ritec-ast",          version = "0.1.0" }
ritec-diagnostic    = { path = "crates/ritec-diagnostic",   version = "0.1.0" }
ritec-parse         = { path = "crates/ritec-parse",        version = "0.1.0" }
ritec-type          = { path = "crates/ritec-type",         version = "0.1.0" }
ritec-type-repl     = { path = "crates/ritec-type-repl",    version = "0.1.0" }

[dependencies]
ritec-ast.workspace         = true
ritec-diagnostic.workspace  = true
ritec-parse.workspace       = true
ritec-type-repl.workspace   = true

color-eyre = "0.6"
eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
