[package]
name = "ritec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rite contributors"]
license = "MIT"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
ritec-arena         = { path = "crates/ritec-arena",        version = "0.1.0" }
ritec-ast           = { path = "crates/ritec-ast",          version = "0.1.0" }
ritec-build         = { path = "crates/ritec-build",        version = "0.1.0" }
ritec-codegen-c     = { path = "crates/ritec-codegen-c",    version = "0.1.0" }
ritec-diagnostic    = { path = "crates/ritec-diagnostic",   version = "0.1.0" }
ritec-hir           = { path = "crates/ritec-hir",          version = "0.1.0" }
ritec-lower         = { path = "crates/ritec-lower",        version = "0.1.0" }
ritec-mir           = { path = "crates/ritec-mir",          version = "0.1.0" }
ritec-parse         = { path = "crates/ritec-parse",        version = "0.1.0" }
ritec-type-repl     = { path = "crates/ritec-type-repl",    version = "0.1.0" }

[dependencies]
ritec-ast.workspace         = true
ritec-build.workspace       = true
ritec-codegen-c.workspace   = true
ritec-diagnostic.workspace  = true
ritec-hir.workspace         = true
ritec-lower.workspace       = true
ritec-parse.workspace       = true
ritec-type-repl.workspace   = true

color-eyre = "0.6"
eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
