[package]
name = "ritec"
version = "0.1.0"
edition = "2021"

[dependencies]
smallvec = { version = "1.13", features = ["union"] }
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.2", features = ["fancy"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true