[package]
name = "ritec-solve-repl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ritec-diagnostic = { path = "../ritec-diagnostic", version = "0.1.0" }
ritec-parse = { path = "../ritec-parse", version = "0.1.0" }
ritec-solve = { path = "../ritec-solve", version = "0.1.0" }
ritec-span = { path = "../ritec-span", version = "0.1.0" }
