[package]
name = "ritec-type-repl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ritec-diagnostic = { path = "../ritec-diagnostic", version = "0.1.0" }
ritec-parse = { path = "../ritec-parse", version = "0.1.0" }
ritec-type = { path = "../ritec-type", version = "0.1.0" }
