[package]
name = "ritec-type-repl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ritec-diagnostic.workspace = true
ritec-parse.workspace = true
ritec-source.workspace = true
ritec-hir.workspace = true

clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
thiserror = "1.0"
